FactoryFinderInstance: minor optimizations
Signed-off-by: pizzi80 <paolo@given2.com>